--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorLoginTitle">#6E585A</color>
+    <color name="colorTextInputBox">#FFA066</color>
+    <color name="colorButton">#FFAD61</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
