--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,8 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                app:boxStrokeColor="@color/colorTextInputBox"
-                app:passwordToggleEnabled="true">
+                app:boxStrokeColor="@color/colorTextInputBox">
 
             <EditText
                     android:id="@+id/passwordEditText"
